[package]
name = "kvs"
version = "0.1.0"
authors = ["seongmin.kim <seongmin.kim@qraftec.com>"]
edition = "2018"
description = "in-memory key value store"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
ron = "0.5.1"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"
tempfile = "3.0.7"
walkdir = "2.2.7"
